--- a/index.html
+++ b/index.html
@@ -294,6 +294,15 @@
 
 </div>
 <!-- Principal conteneur END -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9HJCJDJPK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D9HJCJDJPK');
+</script>
     
 
 </body>
