--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
 </div>
 <!-- Principal conteneur END -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9HJCJDJPK"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Q1LWE30NW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-D9HJCJDJPK');
+  gtag('config', 'G-9Q1LWE30NW');
 </script>
     
 
